Remove word Menu from the hamburger menu

--- a/content/template.html
+++ b/content/template.html
@@ -127,7 +127,7 @@
 <body>
 
     <input type="checkbox" id="menu-toggle" hidden />
-    <label for="menu-toggle" class="menu-icon">☰ Menu</label>
+    <label for="menu-toggle" class="menu-icon">☰</label>
 
     {{Menu}}
 
