Update via Omny CMS

--- a/content/pages/index/Body.html
+++ b/content/pages/index/Body.html
@@ -1,1 +1,1 @@
-<p>Omny CMS is a headless CMS and a rich editor.</p>
+<p>Omny CMS is a headless CMS and a rich editor. <strong>This is a bold test.</strong></p>
