--- a/content/pages/index/Body.html
+++ b/content/pages/index/Body.html
@@ -1,3 +1,3 @@
-<p>Omny CMS is a headless CMS and a rich editor. <strong>This is a bold test.</strong></p>
+<p>Omny CMS is a headless CMS and a rich editor. <strong>This is a bold test 2.</strong></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
